# app/Http/Controllers/ArendatorsController.php
@@ -12,35 +12,50 @@ use Illuminate\Http\JsonResponse;
 
 class ArendatorsController extends Controller
 {
-/**
-     *
+    /**
+     * 
      * @OA\Get(
-     *      path="/api/users/",
+     *      path="/users",
      *      summary="Получить всех пользователей",
      *      description="Получить пользователей",
      *      tags={"Арендаторы"},
      *      @OA\Response(
-     *          response="200",
+     *          response=200,
      *          description="Успех",
-     *          @OA\MediaType(
-     *              mediaType="application/json",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/User")
+     *              }
      *          )
      *      ),
      *      @OA\Response(
-     *          response="400",
-     *          description="Неправильный запрос",
-     *      ),
-     *      @OA\Response(
-     *          response="401",
+     *          response=401,
      *          description="Не авторизован",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Response401")
+     *              }
+     *          )
      *      ),
      *      @OA\Response(
-     *          response="404",
+     *          response=403,
+     *          description="Доступ запрещен",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Response403")
+     *              }
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=404,
      *          description="Не найдено",
-     *      )
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Response404")
+     *              }
+     *          )
+     *      ),
      * ),
-     *
-     * @return JsonResponse
      */
     public function index() : JsonResponse
     {
@@ -48,53 +63,9 @@ class ArendatorsController extends Controller
     }
 
     /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
-    {
-        //
-    }
-
-        /**
-     * Store a newly created resource in storage.
-     *
-     * @OA\Post(
-     *      path="/api/users/",
-     *      summary="Создать пользователя",
-     *      description="Создает нового пользователя и возвращает его",
-     *      tags={"Арендаторы"},
-     *      @OA\RequestBody(
-     *          required=true,
-     *          @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
-     *          @OA\Property(property="password", type="string", format="password", example="PassWord12345"),
-     *      ),
-     *      @OA\Response(
-     *          response="200",
-     *          description="Возвращает запись созданного пользователя",
-     *      ),
-     *      @OA\Response(
-     *          response="422",
-     *          description="Неверно переданы данные в запросе",
-     *      )
-     * ),
-     *
-     * @param  StoreRequest $request
-     * @return JsonResponse
-     */
-    public function store(StoreRequest $request) : JsonResponse
-    {
-        $a = Arendator::create($request->validated());
-        return response()->json([
-            'message' => 'Succesfully created',
-            $a->id => $a
-        ], 200);
-    }
-
-    /**
-     * Display the specified resource.
      *
      * @OA\Get(
-     *      path="/api/users/{id}",
+     *      path="/users/{id}",
      *      summary="Получить пользователя",
      *      description="Получает пользователя по идентификатору и возвращает его",
      *      tags={"Арендаторы"},
@@ -115,8 +86,6 @@ class ArendatorsController extends Controller
      *      )
      * ),
      *
-     * @param  int  $id
-     * @return JsonResponse
      */
     public function show(int $id) : JsonResponse
     {
@@ -127,17 +96,41 @@ class ArendatorsController extends Controller
     }
 
     /**
-     * Show the form for editing the specified resource.
+     *
+     * @OA\Post(
+     *      path="users/create",
+     *      summary="Создать пользователя",
+     *      description="Создает нового пользователя и возвращает его",
+     *      tags={"Арендаторы"},
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
+     *          @OA\Property(property="password", type="string", format="password", example="PassWord12345"),
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Возвращает запись созданного пользователя",
+     *      ),
+     *      @OA\Response(
+     *          response="422",
+     *          description="Неверно переданы данные в запросе",
+     *      )
+     * ),
+     *
      */
-    public function edit(Arendator $users)
+    public function store(StoreRequest $request) : JsonResponse
     {
-        //
+        $a = Arendator::create($request->validated());
+        return response()->json([
+            'message' => 'Succesfully created',
+            $a->id => $a
+        ], 200);
     }
+
     /**
-     * Update the specified resource in storage.
      *
      * @OA\Patch(
-     *      path="/api/users/{id}",
+     *      path="/users/{id}/update",
      *      summary="Обновить пользователя",
      *      description="Обновляет запись о пользователе и возвращает его",
      *      tags={"Арендаторы"},
@@ -168,9 +161,6 @@ class ArendatorsController extends Controller
      *      )
      * ),
      *
-     * @param  UpdateRequest $request
-     * @param  Arendators $a
-     * @return JsonResponse
      */
     public function update(UpdateRequest $request, Arendator $a) : JsonResponse
     {
@@ -182,10 +172,9 @@ class ArendatorsController extends Controller
         ], 200);
     }
     /**
-     * Remove the specified resource from storage.
      *
      * @OA\Delete(
-     *      path="/api/users/{id}",
+     *      path="/users/{id}/delete",
      *      summary="Удалить пользователя",
      *      description="Удаляет запись о пользователе",
      *      tags={"Арендаторы"},
@@ -209,12 +198,10 @@ class ArendatorsController extends Controller
      *      )
      * ),
      *
-     * @param  Arendators $a
-     * @return JsonResponse
      */
     public function destroy(Arendator $a) : JsonResponse
     {
-        $a->deleted();
+        $a->delete();
         return response()->json(['message' => 'Succesfully destroyed'], 200);
     }
 }
