# app/Http/Controllers/CarsController.php
@@ -14,28 +14,77 @@ class CarsController extends Controller
 {
     /**
      * @OA\Get(
-     *      path="/api/cars/",
+     *      path="/cars",
      *      summary="Получить все ТС",
      *      description="Получить список ТС",
      *      tags={"Машины"},
-     * @OA\Response(
-     *   response=200,
-     *   description="OK"
-     *   )
+     *      @OA\Response(
+     *          response=200,
+     *          description="Успех",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Car")
+     *              }
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Не авторизован",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Response401")
+     *              }
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Доступ запрещен",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Response403")
+     *              }
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Не найдено",
+     *          @OA\JsonContent(
+     *              oneOf={
+     *                  @OA\Schema(ref="#/components/schemas/Response404")
+     *              }
+     *          )
+     *      ),
      * ),
-     */    
+     */
     public function index() : JsonResponse
     {
         return response()->json(Car::all());
     }
 
-    public function create()
+    /**
+     * @OA\Get(
+     *      path="/cars/{id}",
+     *      summary="Получить ТС",
+     *      description="Получает ТС по идентификатору и возвращает его",
+     *      tags={"Машины"},
+     *      @OA\Response(
+     *          response=200,
+     *          description="OK"
+     *      )
+     * )
+     *
+     */
+    public function show(int $id) : JsonResponse
     {
-        
+        $cars = Car::find($id);
+        return response()->json([
+            $cars->id => $cars
+        ], 200);
     }
+
     /**
      * @OA\Post(
-     *      path="/api/cars/",
+     *      path="/cars/create",
      *      summary="Создать ТС",
      *      description="Создает новое ТС и возвращает ее",
      *      tags={"Машины"},
@@ -56,33 +105,8 @@ class CarsController extends Controller
     }
 
     /**
-     * @OA\Get(
-     *      path="/api/cars/{id}",
-     *      summary="Получить ТС",
-     *      description="Получает ТС по идентификатору и возвращает его",
-     *      tags={"Машины"},
-     * @OA\Response(
-     *   response=200,
-     *   description="OK"
-     *   )
-     * ),
-     */
-    public function show(int $id) : JsonResponse
-    {
-        $cars = Car::find($id);
-        return response()->json([
-            $cars->id => $cars
-        ], 200);
-    }
-
-    public function edit(Car $cars)
-    {
-        //
-    }
-
-    /**
      * @OA\Patch(
-     *      path="/api/cars/{id}",
+     *      path="/cars/{id}/update",
      *      summary="Обновить ТС",
      *      description="Обновляет запись о ТС и возвращает ее",
      *      tags={"Машины"},
@@ -105,7 +129,7 @@ class CarsController extends Controller
 
     /**
      * @OA\Delete(
-     *      path="/api/cars/{id}",
+     *      path="/cars/{id}/delete",
      *      summary="Удалить ТС",
      *      description="Удаляет запись о ТС",
      *      tags={"Машины"},
