# storage/api-docs/api-docs.json
@@ -14,69 +14,91 @@
     },
     "servers": [
         {
-            "url": "http://my-default-host.com",
-            "description": "Development"
+            "url": "http://localhost/api",
+            "description": "Local"
         },
         {
-            "url": "http://api/",
+            "url": "http://localhost/api/auth",
             "description": "Production"
         }
     ],
     "paths": {
-        "/api/users/": {
+        "/users": {
             "get": {
                 "tags": [
                     "Арендаторы"
                 ],
                 "summary": "Получить всех пользователей",
                 "description": "Получить пользователей",
-                "operationId": "35e50c1049176531dd8f4a7cb5b9ff55",
+                "operationId": "bbb0f1f8ad5ee45993b7485084d854a3",
                 "responses": {
                     "200": {
                         "description": "Успех",
                         "content": {
-                            "application/json": {}
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/User"
+                                        }
+                                    ]
+                                }
+                            }
                         }
                     },
-                    "400": {
-                        "description": "Неправильный запрос"
-                    },
                     "401": {
-                        "description": "Не авторизован"
+                        "description": "Не авторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Response401"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Response403"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
                     },
                     "404": {
-                        "description": "Не найдено"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Арендаторы"
-                ],
-                "summary": "Создать пользователя",
-                "description": "Создает нового пользователя и возвращает его",
-                "operationId": "e86dba737776967e9d05a106650f1a72",
-                "requestBody": {
-                    "required": true
-                },
-                "responses": {
-                    "200": {
-                        "description": "Возвращает запись созданного пользователя"
-                    },
-                    "422": {
-                        "description": "Неверно переданы данные в запросе"
+                        "description": "Не найдено",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Response404"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "/api/users/{id}": {
+        "/users/{id}": {
             "get": {
                 "tags": [
                     "Арендаторы"
                 ],
                 "summary": "Получить пользователя",
                 "description": "Получает пользователя по идентификатору и возвращает его",
-                "operationId": "7006306e6178447e940a941b3e8cdda2",
+                "operationId": "39ad6cf6462823f927e5150362174982",
                 "parameters": [
                     {
                         "name": "id",
@@ -97,50 +119,37 @@
                         "description": "Пользователь не найден"
                     }
                 }
-            },
-            "delete": {
+            }
+        },
+        "users/create": {
+            "post": {
                 "tags": [
                     "Арендаторы"
                 ],
-                "summary": "Удалить пользователя",
-                "description": "Удаляет запись о пользователе",
-                "operationId": "7c235bbe392757303ce963138e978b50",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Идентификатор пользователя",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": 1
-                        }
-                    }
-                ],
+                "summary": "Создать пользователя",
+                "description": "Создает нового пользователя и возвращает его",
+                "operationId": "7a8b31f9b7c7cecdf9e99854f5f55dac",
+                "requestBody": {
+                    "required": true
+                },
                 "responses": {
                     "200": {
-                        "description": "Возвращает сообщение об успешном удалении",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "example": {
-                                    "message": "Succesfully destroyed"
-                                }
-                            }
-                        }
+                        "description": "Возвращает запись созданного пользователя"
                     },
-                    "404": {
-                        "description": "Неверно передан идентификатор пользователя"
+                    "422": {
+                        "description": "Неверно переданы данные в запросе"
                     }
                 }
-            },
+            }
+        },
+        "/users/{id}/update": {
             "patch": {
                 "tags": [
                     "Арендаторы"
                 ],
                 "summary": "Обновить пользователя",
                 "description": "Обновляет запись о пользователе и возвращает его",
-                "operationId": "26a3784d2d53a5350b2d099a6046c015",
+                "operationId": "ddb791f6c5195462bd3bbfb7e901df8a",
                 "parameters": [
                     {
                         "name": "id",
@@ -177,27 +186,120 @@
                 }
             }
         },
-        "/api/cars/": {
+        "/users/{id}/delete": {
+            "delete": {
+                "tags": [
+                    "Арендаторы"
+                ],
+                "summary": "Удалить пользователя",
+                "description": "Удаляет запись о пользователе",
+                "operationId": "b3e633ef3046079bab63090f8578e49a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Идентификатор пользователя",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Возвращает сообщение об успешном удалении",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "message": "Succesfully destroyed"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Неверно передан идентификатор пользователя"
+                    }
+                }
+            }
+        },
+        "/cars": {
             "get": {
                 "tags": [
                     "Машины"
                 ],
                 "summary": "Получить все ТС",
                 "description": "Получить список ТС",
-                "operationId": "7fe7b0e5d40307754c891f76be713845",
+                "operationId": "848ef97d2b359a61f9f16b4529b28f9f",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Успех",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Car"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Не авторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Response401"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Response403"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Не найдено",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Response404"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
                     }
                 }
-            },
-            "post": {
+            }
+        },
+        "/cars/{id}": {
+            "get": {
                 "tags": [
                     "Машины"
                 ],
-                "summary": "Создать ТС",
-                "description": "Создает новое ТС и возвращает ее",
-                "operationId": "bf4e81d5058d9b37f38e5994310d52b0",
+                "summary": "Получить ТС",
+                "description": "Получает ТС по идентификатору и возвращает его",
+                "operationId": "0df57a1470d202059ac99693a141b443",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -205,40 +307,44 @@
                 }
             }
         },
-        "/api/cars/{id}": {
-            "get": {
+        "/cars/create": {
+            "post": {
                 "tags": [
                     "Машины"
                 ],
-                "summary": "Получить ТС",
-                "description": "Получает ТС по идентификатору и возвращает его",
-                "operationId": "73df72183ffc9bd24eda68dd4686541d",
+                "summary": "Создать ТС",
+                "description": "Создает новое ТС и возвращает ее",
+                "operationId": "d386eb52bcdc6b956621bcbfa7b53908",
                 "responses": {
                     "200": {
                         "description": "OK"
                     }
                 }
-            },
-            "delete": {
-                "tags": [
-                    "Машины"
-                ],
-                "summary": "Удалить ТС",
-                "description": "Удаляет запись о ТС",
-                "operationId": "c75eb479fd0b7b312112788ab43d9235",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            },
+            }
+        },
+        "/cars/{id}/update": {
             "patch": {
                 "tags": [
                     "Машины"
                 ],
                 "summary": "Обновить ТС",
                 "description": "Обновляет запись о ТС и возвращает ее",
-                "operationId": "648b12e3bf08e0fda1ddb1eec3ce6793",
+                "operationId": "e1657cc13f42ebbb8567bae67b90c854",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/cars/{id}/delete": {
+            "delete": {
+                "tags": [
+                    "Машины"
+                ],
+                "summary": "Удалить ТС",
+                "description": "Удаляет запись о ТС",
+                "operationId": "d6aba5bd0cb7462d68f508df1788ea64",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -248,6 +354,130 @@
         }
     },
     "components": {
+        "schemas": {
+            "User": {
+                "title": "User",
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "example": "45c746aa-64e1-349c-8a94-9daf95d36c52"
+                    },
+                    "default_bill_id": {
+                        "type": "string",
+                        "example": 1
+                    },
+                    "last_name": {
+                        "type": "string",
+                        "example": "Haley"
+                    },
+                    "first_name": {
+                        "type": "string",
+                        "example": "Carolyn"
+                    },
+                    "middle_name": {
+                        "type": "string",
+                        "example": "Berta"
+                    },
+                    "status": {
+                        "type": "string",
+                        "example": "active"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "example": "2024-05-17T13:22:34.000000Z"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "example": "2024-05-17T13:22:34.000000Z"
+                    },
+                    "deleted_at": {
+                        "type": "string",
+                        "example": null
+                    }
+                },
+                "type": "object"
+            },
+            "Car": {
+                "title": "Car",
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "example": "5034b4cc-0852-3b32-b7f6-0eb8e438d76d"
+                    },
+                    "model_id": {
+                        "type": "string",
+                        "example": "99447261-3369-4f90-abcd-f126664874d8"
+                    },
+                    "status": {
+                        "type": "string",
+                        "example": "rented"
+                    },
+                    "mileage": {
+                        "type": "integer",
+                        "example": 10383
+                    },
+                    "license_plate": {
+                        "type": "string",
+                        "example": "Н709ОM 147"
+                    },
+                    "year": {
+                        "type": "integer",
+                        "example": 2003
+                    },
+                    "location": {
+                        "type": "string",
+                        "example": "-35.71 -45.96609"
+                    },
+                    "price_minute": {
+                        "type": "integer",
+                        "example": 2
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "example": "2024-05-17T13:22:34.000000Z"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "example": "2024-05-17T13:22:34.000000Z"
+                    },
+                    "deleted_at": {
+                        "type": "string",
+                        "example": null
+                    }
+                },
+                "type": "object"
+            },
+            "Response401": {
+                "title": "Response401",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": "Unauthorized"
+                    }
+                },
+                "type": "object"
+            },
+            "Response403": {
+                "title": "Response403",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": "Forbidden"
+                    }
+                },
+                "type": "object"
+            },
+            "Response404": {
+                "title": "Response404",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": "Not Found"
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
